# StS2_Assist

./: .gitignore  README.md  index.html  package-lock.json  package.json  probe_hand.txt
app/: demo.js  main.js  preload.js  service.js  target_window.js
core/game_reader/: mock_reader.js
core/state_parser/: game_state.js
database/: archetypes.json  cards.json  index.js  relics.json
database/sts2-localization/: README.md  report.json
database/sts2-localization/localization/eng/: achievements.json  acts.json  afflictions.json  ancients.json  ascension.json  bestiary.json  card_keywords.json  card_library.json  card_reward_ui.json  (+36 more)
overlay/ui/: index.html  renderer.js  styles.css
src/: main.js  mode.js  render.js  state.js  styles.css  tauri.js  ui.js
src-tauri/: Cargo.toml  memory-reader.example.json  memory-reader.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: debug_state.rs  main.rs
strategy/: card_evaluator.js  deck_analyzer.js  path_planner.js  recommendation_engine.js
test/: recommendation_engine.test.js
tools/: extract_sts2_localization.mjs  launch_hud_dev.ps1  launch_sts2_with_event_hook_bridge.ps1  launch_sts2_with_hook.ps1  launch_sts2_with_log_bridge.ps1  replay_probe.py  windows_hand_search_hints.ps1  windows_memory_probe.ps1
tools/Sts2ClrProbe/: ProbeCommon.cs  ProbeDump.cs  ProbeEvent.cs  ProbeReward.cs  ProbeShop.cs  ProbeTreasure.cs  ProbeUi.cs  Program.cs  Sts2ClrProbe.csproj
tools/Sts2EventHook/: Bootstrap.cs  CombatHookManifest.cs  README.md  SceneHookManifest.cs  StartupHook.cs  Sts2EventHook.csproj
(+45 files in other folders)
